--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "@stripe/react-stripe-js": "^1.16.3",
     "@stripe/stripe-js": "^1.46.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "escape-html": "^1.0.3",
     "express": "^4.19.2",
-    "next": "13.5.2",
-    "payload": "^2.0.7",
+    "next": "^13.5.2",
+    "payload": "^2.24.2",
     "payload-admin-bar": "^1.0.6",
     "qs": "6.11.2",
     "react": "^18.2.0",
